Cria CRUD de produtos na API
